<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_face_24"
        android:title="@string/title_about_me" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_school_24"
        android:title="@string/title_education" />

    <item
        android:id="@+id/navigation_experience"
        android:icon="@drawable/ic_psychology_24"
        android:title="@string/title_experience" />

    <item
        android:id="@+id/navigation_fun"
        android:icon="@drawable/ic_celebration_24"
        android:title="@string/title_fun" />

    <item
        android:id="@+id/navigation_sandbox"
        android:icon="@drawable/ic_architecture_24"
        android:title="@string/title_sandbox" />


</menu>