<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.khai.mycv.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_about_app"
            app:destination="@id/about_app"
            android:label="@string/title_about_app"/>
        <action
            android:id="@+id/action_navigation_home_to_about_me"
            app:destination="@id/about_me"
            android:label="@string/title_about_me"/>
    </fragment>

    <fragment
        android:id="@+id/about_app"
        android:name="com.khai.mycv.ui.home.AboutAppFragment"
        tools:layout="@layout/fragment_about_app" />

    <fragment
        android:id="@+id/about_me"
        android:name="com.khai.mycv.ui.home.AboutMeFragment"
        tools:layout="@layout/fragment_about_me" />

    <fragment
        android:id="@+id/navigation_education"
        android:name="com.khai.mycv.ui.education.EducationFragment"
        android:label="@string/title_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/navigation_experience"
        android:name="com.khai.mycv.ui.experience.ExperienceFragment"
        android:label="@string/title_experience"
        tools:layout="@layout/fragment_experience" />

    <fragment
        android:id="@+id/navigation_fun"
        android:name="com.khai.mycv.ui.funfacts.FunFragment"
        android:label="@string/title_fun"
        tools:layout="@layout/fragment_fun" />

</navigation>